<resources>
    <string name="app_name">Event Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">The Best \nEvent\nPlanner</string>
    <string name="add_event">Add event</string>
    <string name="edit_event">Edit event</string>
    <string name="your_events">Your events</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_desc">Enter description (optional)</string>
    <string name="enter_date">Enter date and time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="visited_the_event">Visited the event</string>
    <string name="event_was_visited">Event was visited</string>
    <string name="weather_icon">weather icon</string>
    <string name="event_not_visited">Event not visited</string>
    <string name="visit_button">visit button</string>
</resources>